--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Start project for React and Redux ",
   "main": "index.js",
   "scripts": {
-    "start": "rimraf dist && node server.js",
-    "build": "rimraf dist && webpack --config ./config/webpack/webpack.prod.config.js",
+    "start": "rimraf dist && node server.js --env=development",
+    "build": "rimraf dist && webpack --progress --colors --env=production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -16,15 +16,16 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babel-preset-react-hmre": "^1.1.1",
-    "cross-env": "^2.0.0",
     "express": "^4.14.0",
     "file-loader": "^0.9.0",
     "open": "0.0.5",
+    "react-hot-loader": "^1.3.0",
     "rimraf": "^2.5.4",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.12.2"
+    "webpack-hot-middleware": "^2.12.2",
+    "yargs": "^4.8.1"
   },
   "dependencies": {
     "react": "^15.3.0",
