--- a/package.json
+++ b/package.json
@@ -34,7 +34,13 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.6.3",
+    "immutable": "^3.8.1",
     "react": "^15.3.0",
-    "react-dom": "^15.3.0"
+    "react-dom": "^15.3.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
+    "redux-immutable": "^3.0.7",
+    "redux-logger": "^2.6.1",
+    "uuid": "^2.0.2"
   }
 }
