--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Start project for React and Redux ",
   "main": "index.js",
   "scripts": {
-    "start": "rimraf dist && node server.js --env=development",
+    "start": "rimraf dist && nodemon server.js --env=development",
     "build": "rimraf dist && webpack --progress --colors --env=production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,6 +20,7 @@
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "nodemon": "^1.10.0",
     "open": "0.0.5",
     "react-hot-loader": "^1.3.0",
     "rimraf": "^2.5.4",
