--- a/package.json
+++ b/package.json
@@ -5,18 +5,19 @@
   "main": "index.js",
   "scripts": {
     "start": "rimraf dist && node server.js --env=development",
-    "build": "rimraf dist && webpack --progress --colors --env=production",
+    "build": "cross-env NODE_ENV=production && rimraf dist && webpack --progress --colors",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
-    "babel-preset-react-hmre": "^1.1.1",
+    "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
+    "eslint": "^3.3.1",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "faker": "^3.1.0",
