--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
+    "react-router": "^2.6.1",
     "redux": "^3.5.2",
     "redux-immutable": "^3.0.7",
     "redux-logger": "^2.6.1",
