--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "font-awesome": "^4.6.3",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.16.1",
     "moment": "^2.14.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
