--- a/package.json
+++ b/package.json
@@ -38,10 +38,11 @@
   "dependencies": {
     "babel-polyfill": "^6.13.0",
     "bootstrap": "^3.3.7",
+    "dagre": "^0.7.4",
     "font-awesome": "^4.6.3",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
-    "lodash": "^4.16.1",
+    "lodash": "^3.10.1",
     "moment": "^2.14.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
