--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^1.10.0",
     "open": "0.0.5",
     "react-hot-loader": "^1.3.0",
+    "react-json-tree": "^0.10.0",
     "rimraf": "^2.5.4",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
