--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Start project for React and Redux ",
   "main": "index.js",
   "scripts": {
-    "start": "rimraf dist && node server.js --env=development --progress",
+    "start": "rimraf dist && node server.js --env=development ",
     "build": "cross-env NODE_ENV=production && rimraf dist && webpack --progress --colors",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
