--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "faker": "^3.1.0",
     "file-loader": "^0.9.0",
     "http-proxy-middleware": "^0.17.1",
+    "lokijs": "^1.4.1",
     "nodemon": "^1.10.0",
     "open": "0.0.5",
     "react-hot-loader": "^1.3.0",
