--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "redux-immutable": "^3.0.7",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
+    "save-svg-as-png": "^1.0.3",
     "uuid": "^2.0.2"
   }
 }
