--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
+    "body-parser": "^1.15.2",
     "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
     "eslint": "^3.3.1",
