--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "rimraf dist && node server.js --env=development ",
     "build": "cross-env NODE_ENV=production && rimraf dist && webpack --progress --colors",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env NODE_ENV=test karma start internals/testing/karma.conf.js --single-run"
   },
   "author": "",
   "license": "MIT",
@@ -16,15 +16,19 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "body-parser": "^1.15.2",
+    "cheerio": "^0.22.0",
     "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
+    "enzyme": "^2.6.0",
     "eslint": "^3.3.1",
+    "expect": "^1.20.2",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "faker": "^3.1.0",
     "file-loader": "^0.9.0",
     "http-proxy-middleware": "^0.17.1",
     "lokijs": "^1.4.1",
+    "minimist": "^1.2.0",
     "nodemon": "^1.10.0",
     "open": "0.0.5",
     "react-hot-loader": "^1.3.0",
@@ -36,7 +40,25 @@
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.14.1",
     "webpack-hot-middleware": "^2.12.2",
-    "yargs": "^4.8.1"
+    "babel-plugin-istanbul": "2.0.3",
+    "babel-plugin-react-intl": "2.2.0",
+    "babel-plugin-react-transform": "2.0.2",
+    "babel-plugin-transform-react-constant-elements": "6.9.1",
+    "babel-plugin-transform-react-inline-elements": "6.8.0",
+    "babel-plugin-transform-react-remove-prop-types": "0.2.10",
+    "babel-preset-latest": "6.16.0",
+    "babel-preset-react-hmre": "1.1.1",
+    "babel-preset-stage-0": "6.16.0",
+    "karma": "1.3.0",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-coverage": "1.1.1",
+    "karma-firefox-launcher": "1.0.0",
+    "karma-ie-launcher": "1.0.0",
+    "karma-mocha": "1.2.0",
+    "karma-mocha-reporter": "2.2.0",
+    "karma-safari-launcher": "1.0.0",
+    "karma-sourcemap-loader": "0.3.7",
+    "karma-webpack": "1.8.0"
   },
   "dependencies": {
     "babel-polyfill": "^6.13.0",
